CELL needs to be recalculated during import as well, fdo#60645

Change-Id: If981199f01d4b33270d82c65fb033fa51222fb62